<resources>
    <string name="topodroid_man">https://sites.google.com/site/speleoapps/home/topodroid/docs</string>
    <string name="app_name">TopoDroid</string>
    <string name="version_ask">Updating to a new version of TopoDroid.\nDo you want to reinstall drawing items?</string>
    <string name="version_title">Version update</string>
    <string name="POINT">POINT</string>
    <string name="LINE">LINE</string>
    <string name="AREA">AREA</string>
    <string name="HELP">HELP</string>
    <string name="STATION">STATION </string>
    <string name="memoryA3">DistoX A3 memory</string>
    <string name="memoryX310">DistoX X310 memory</string>
    <string name="memory_data">DistoX data</string>
    <string name="td_symbol_text">Do you need to install drawing tools?\nYou can do it later with the app TdSymbol</string>
    <string name="td_symbol_ask">Don\'t ask me again</string>
    <string name="thp_user">user</string>
    <string name="thp_label">label</string>
    <string name="thl_user">user</string>
    <string name="thl_wall">wall</string>
    <string name="tha_user">user</string>
    <string name="tha_water">water</string>
    <string name="missing_area">AREA</string>
    <string name="missing_hint">Please, enable the missing tools or install them</string>
    <string name="missing_line">LINE</string>
    <string name="missing_point">POINT</string>
    <string name="missing_station">Missing station</string>
    <string name="missing_symbols">There are missing drawing tools.\nSave anyway ?</string>
    <string name="missing_title">MISSING SYMBOLS</string>
    <string name="missing_warning">The following drawing tools are missing.\n</string>
    <string name="failed_snap_to_line">No close line-point to snap the area border to</string>
    <string name="failed_snap_to_point">No close point to snap the point to</string>
    <string name="calib_new">New Calibration</string>
    <string name="calib_exists">Calibration already exists</string>
    <string name="calib_delete">Delete calibration </string>
    <string name="calib_device_mismatch">WARNING: Calibration-Device mismatch</string>
    <string name="calib_no_name">The name is mandatory</string>
    <string name="calib_gm_undelete">Undelete calibration data?</string>
    <string name="calib_saved">Saved calibration</string>
    <string name="calib_updated">Updated calibration</string>
    <string name="calib_compute_groups">Computing calibration data groups ...</string>
    <string name="calib_compute_coeffs">Computing calibration coefficients ...</string>
    <string name="calib_write_coeffs">Writing calibration coefficients ...</string>
    <string name="connect_failed">Failed connect</string>
    <string name="data"> data</string>
    <string name="using">Using %1$s %2$s</string>
    <string name="calib_error">Error: %1$.4f degrees</string>
    <string name="calib_max_error">Max. error: %1$.4f degrees</string>
    <string name="calib_iter">Iterations: %1$d</string>
    <string name="calib_saturated_values">WARNING: %1$d saturated data</string>
    <string name="algorithm">Algorithm:</string>
    <string name="auto">auto</string>
    <string name="linear">linear</string>
    <string name="non_linear">non-linear</string>
    <string name="device_algo_failed">Algorithm auto-determination failed\nUsing linear algorithm</string>
    <string name="device_busy">Device busy</string>
    <string name="device_illegal_addr">Illegal memory address</string>
    <string name="device_info">Device info</string>
    <string name="device_model_set">Do you really want to change the model of the device</string>
    <string name="device_none">No DistoX selected</string>
    <string name="device_pairing">Pairing: check notifications</string>
    <string name="device_reset">Reset DistoX memory</string>
    <string name="device_code">DistoX code %1$4d</string>
    <string name="device_firmware">Firmware  %1$d.%2$d</string>
    <string name="device_hardware">Hardware  %1$d.%2$d</string>
    <string name="device_status_angle">Angle units %1$s</string>
    <string name="device_status_compass">Compass/clino %1$s</string>
    <string name="device_status_calib">Mode %1$s</string>
    <string name="device_status_silent">Silent %1$s</string>
    <string name="bt_reset">Reset bluetooth connection</string>
    <string name="save_as">save as</string>
    <string name="comment">comment</string>
    <string name="flag">Flag</string>
    <string name="duplicate">duplicate</string>
    <string name="surface">surface</string>
    <string name="extend">Extend</string>
    <string name="extend_ignore">None</string>
    <string name="extend_left">Left</string>
    <string name="extend_right">Right</string>
    <string name="extend_vert">Vert</string>
    <string name="external_prompt">Enter measurement</string>
    <string name="splay_at_to">LRUD at TO station</string>
    <string name="few_data">Not enough data</string>
    <string name="import_title">File Import</string>
    <string name="import_wait">Importing file... please wait...</string>
    <string name="import_already">Survey already imported</string>
    <string name="import_none">No file to import</string>
    <string name="import_zip_ok">Successfully imported zip file</string>
    <string name="import_zip_wait">Imported zip file may take long. Please wait ...</string>
    <string name="reversed">reverse</string>
    <string name="outline">outline</string>
    <string name="out">out</string>
    <string name="in">in</string>
    <string name="none">none</string>
    <string name="photo_name">station/name</string>
    <string name="photo_photo">photo</string>
    <string name="photo_sensor">sensor</string>
    <string name="photo_external">measurement</string>
    <string name="photo_sensor_prompt">Select photo or sensor</string>
    <string name="sensor_type">type</string>
    <string name="sensor_value">value</string>
    <string name="sensor_comment">comment</string>
    <string name="button_cancel"    >Cancel    </string>
    <string name="button_ok"        >OK        </string>
    <string name="mode_leg">Legs</string>
    <string name="mode_splay">Splays</string>
    <string name="mode_station">Stations</string>
    <string name="mode_grid">Grid</string>
    <string name="button_erase">Erase</string>
  <string name="pref_sock_type_title">Socket</string>
  <string name="pref_sock_type_summary">Socket create</string>
  <string name="pref_comm_retry_title">Connection retry</string>
  <string name="pref_comm_retry_summary">Connection retries number</string>
  <string name="pref_comm_retry_dialogtitle">Connection retries number</string>
  <string name="pref_comm_retry_message">Connection retries number</string>
  <string name="pref_crs_title">C R S </string>
  <string name="pref_crs_summary">CRS name</string>
  <string name="pref_crs_message">Enter the CRS name as in Proj4</string>
  <string name="pref_gps_averaging_title">GPS Averaging</string>
  <string name="pref_gps_averaging_summary">Whether to use GPSAveraging</string>
  <string name="pref_closeness_title">Selection radius</string>
  <string name="pref_closeness_summary">Sketch item selection radius</string>
  <string name="pref_closeness_message">Sketch item selection radius</string>
  <string name="pref_altitude_title">Altitude</string>
  <string name="pref_altitude_summary">Select altitude type</string>
  <string name="pref_survey_stations_title">Survey stations</string>
  <string name="pref_survey_stations_summary">Automatic survey stations</string>
  <string name="pref_accel_thr_title">Acceleration tolerance</string>
  <string name="pref_accel_thr_summary">Tolerance over the shots accelerations</string>
  <string name="pref_accel_thr_message">Tolerance over the shots accelerations</string>
  <string name="pref_mag_thr_title">Magnetic tolerance</string>
  <string name="pref_mag_thr_summary">Tolerance over the shots magnetic field</string>
  <string name="pref_mag_thr_message">Tolerance over the shots magnetic field</string>
  <string name="pref_dip_thr_title">Magnetic dip tolerance</string>
  <string name="pref_dip_thr_summary">Tolerance over the shots magnetic dip</string>
  <string name="pref_dip_thr_message">Tolerance over the shots magnetic dip</string>
  <string name="pref_leg_title">Leg tolerance</string>
  <string name="pref_leg_summary">Tolerance among the shots of a leg</string>
  <string name="pref_leg_message">Tolerance among the shots of a leg</string>
  <string name="pref_vthr_title">Shot vertical threshold</string>
  <string name="pref_vthr_summary">Vertical LRUD/WENS threshold</string>
  <string name="pref_vthr_message">Leg inclination threshold between LRUD/WENS</string>
  <string name="pref_hthr_title">Cross-section h-threshold</string>
  <string name="pref_hthr_summary">Threshold for horizontal cross-sections</string>
  <string name="pref_hthr_message">Shot clino over which cross-sections are horizontal</string>
  <string name="pref_drawing_unit_title">Point tools scale</string>
  <string name="pref_drawing_unit_summary">Scale of the point tools</string>
  <string name="pref_drawing_unit_message">Scale of the point drawing tools</string>
  <string name="pref_segment_title">Line-point spacing</string>
  <string name="pref_segment_summary">Minimum line-point distance</string>
  <string name="pref_segment_message">Minimum distance between points on a line</string>
  <string name="pref_linestyle_title">Line style</string>
  <string name="pref_linestyle_summary">Line drawing style</string>
  <string name="pref_lineacc_title">Bezier accuracy</string>
  <string name="pref_lineacc_summary">Bezier interpolation accuracy</string>
  <string name="pref_lineacc_message">Bezier cubic interpolation accuracy</string>
  <string name="pref_linecorner_title">Bezier corner threshold</string>
  <string name="pref_linecorner_summary">Bezier corner threshold</string>
  <string name="pref_linecorner_message">Bezier corner detection threshold</string>
  <string name="pref_label_size_title">Labels size</string>
  <string name="pref_label_size_summary">Size of the labels</string>
  <string name="pref_label_size_message">Size of the labels</string>
  <string name="pref_line_thickness_title">Line width</string>
  <string name="pref_line_thickness_summary">Drawing line width</string>
  <string name="pref_line_thickness_message">Drawing line width</string>
  <string name="pref_device_title">Device</string>
  <string name="pref_device_summary">DistoX address name</string>
  <string name="pref_device_message">DistoX address name</string>
  <string name="pref_checkBT_title">Bluetooth</string>
  <string name="pref_checkBT_summary">Enable/disable bluetooth</string>
  <string name="pref_checkAttached_title">Midline check</string>
  <string name="pref_checkAttached_summary">Check if stations are attached</string>
  <string name="pref_autoStations_title">Sketch stations</string>
  <string name="pref_autoStations_summary">Add stations automatically</string>
  <string name="pref_loopClosure_title">Loop closure</string>
  <string name="pref_loopClosure_summary">Loop closure-error compensation</string>
  <string name="pref_picker_type_title">Drawing tool picker</string>
  <string name="pref_picker_type_summary">Drawing tool picker type</string>
  <string name="pref_station_size_title">Station name size</string>
  <string name="pref_station_size_summary">Size of the station names</string>
  <string name="pref_station_size_message">Size of the station names</string>
  <string name="pref_unit_length_title">Length units</string>
  <string name="pref_unit_length_summary">Display units for lengths</string>
  <string name="pref_unit_angle_title">Angle units</string>
  <string name="pref_unit_angle_summary">Display units for angles</string>
  <string name="pref_unit_location_title">Location units</string>
  <string name="pref_unit_location_summary">Display units for locations</string>
</resources>