<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip">
   					  

    <CheckBox android:id="@+id/cb_mode_leg"
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/mode_leg"
        />
   					  
    <CheckBox android:id="@+id/cb_mode_splay"
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/mode_splay"
        />
   					  
    <CheckBox android:id="@+id/cb_mode_station"
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/mode_station"
        />
   					  
    <CheckBox android:id="@+id/cb_mode_grid"
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/mode_grid"
        />
   					  
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <Button android:id="@+id/button_mode_ok"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
        android:text="@string/button_ok"
        />
   		

      <Button android:id="@+id/button_mode_cancel"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="right"
        android:text="@string/button_cancel"
        />
    </LinearLayout>

</LinearLayout>

