<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="3dp">
   					  
    <!-- TextView android:id="@+id/line_type"
      android:layout_marginBottom="2dp"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      / -->

    <EditText android:id="@+id/line_options"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:hint="options"
      />

    <CheckBox android:id="@+id/line_reversed"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:text="@string/reversed"
      />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android" 
      android:id="@+id/line_outline"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
        <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/outline"
        />
        <RadioButton android:id="@+id/line_outline_out"
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:text="@string/out"
          />
        <RadioButton android:id="@+id/line_outline_in"
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:text="@string/in"
          />
        <RadioButton android:id="@+id/line_outline_none"
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:text="@string/none"
          />
    </RadioGroup>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >

      <Button android:id="@+id/button_ok"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
                android:singleLine="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
        android:text="@string/button_ok"
      />

      <Button android:id="@+id/button_cancel"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
                android:singleLine="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
        android:text="@string/button_cancel"
      />

      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >
      <Button android:id="@+id/button_erase"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
                android:singleLine="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
        android:text="@string/button_erase"
      />
      </LinearLayout>

    </LinearLayout>

</LinearLayout>
