<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="3dp">

    <EditText android:id="@+id/photo_name" 
        android:maxLines="1" 
        android:layout_marginTop="2dp"
        android:layout_width="fill_parent"
      	android:ems="25"
        android:layout_height="wrap_content" 
        android:hint="@string/photo_name"
        />

    <EditText android:id="@+id/photo_comment" 
        android:maxLines="1" 
        android:layout_marginTop="2dp"
        android:layout_width="fill_parent"
      	android:ems="25"
        android:layout_height="wrap_content" 
        android:hint="@string/comment"
        />
   		
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <Button android:id="@+id/photo_ok"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/button_ok"
        />
   		
      <Button android:id="@+id/photo_cancel"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/button_cancel"
        />
    </LinearLayout>
   		
</LinearLayout>
