<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="3dp">

    <TextView android:id="@+id/photo_sensor_prompt" 
        android:maxLines="1" 
        android:layout_marginTop="2dp"
        android:layout_width="fill_parent"
      	android:ems="25"
        android:layout_height="wrap_content" 
        android:hint="@string/photo_sensor_prompt"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="vertical" 
      android:layout_marginTop="4dp"
      android:layout_marginBottom="10dp"
      >
      <Button android:id="@+id/photo_photo"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
                android:singleLine="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
        android:text="@string/photo_photo"
        />
      <Button android:id="@+id/photo_sensor"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
                android:singleLine="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
        android:text="@string/photo_sensor"
        />
      <Button android:id="@+id/photo_external"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
                android:singleLine="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
        android:text="@string/photo_external"
        />
    </LinearLayout>

    <Button android:id="@+id/photo_cancel"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
                android:singleLine="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
        android:text="@string/button_cancel"
        />
   		
</LinearLayout>
